--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Sprint_4</artifactId>
+    <artifactId>QA-java-diplom-3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
